2020-02-19  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_doe05.m: Make it possible to use the exact KG

	* examples/02_design_of_experiments/stk_example_doe05.m: Make it
	possible to use the exact KG criterion instead of Scott's
	approximation (previously, only the latter was proposed).

	@stk_sampcrit_akg/set.m: Remove replicated input points in xr

	* sampling/@stk_sampcrit_akg/set.m: Remove replicated input points
	when the AKG reference grid is construted using Scott's original
	method.

2020-02-07  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim_optim.m: Generate a warning instead of an error

	* param/estim/stk_param_estim_optim.m: Generate a warning instead
	of an error when the optimization algorithms returns a points that
	is not better than the starting point.

2020-01-08  Julien Bect  <julien.bect@centralesupelec.fr>

	Re-organise prediction code

	* core/stk_predict.m: Now reduced to a simple gateway that
	processes all possible calling syntaxes and then delegates to
	`stk_predict` for the actual computations, for all types of
	models.  The shorter calling syntax is now documented.
	* model/@stk_model_/stk_predict_.m: New function, that simply
	raises an error message.  Derived classes must implement it.
	* model/@stk_model_gpposterior/stk_predict.m: Renamed from.
	* model/@stk_model_gpposterior/stk_predict_.m: Renamed to.
	* model/prior_struct/stk_predict_.m: New function, which computes
	a trivial prediction for prior models.
	* model/noise/@stk_gaussiannoise_/stk_predict_.m: New function,
	which computes a trivial prediction for noise models.
	* admin/octpkg/INDEX: Update index.

	@stk_gaussiannoise_het0/stk_variance_eval.m: Fix empty x case

	* model/noise/@stk_gaussiannoise_het0/stk_variance_eval.m: Return
	the correct output when x is empty.

	stk_gaussiannoise_het0.m: Provide a default constructor

	* model/noise/@stk_gaussiannoise_het0/stk_gaussiannoise_het0.m:
	Provide a default constructor.
